fix alignment

--- a/css/agencyes.css
+++ b/css/agencyes.css
@@ -665,7 +665,7 @@ ul.social-buttons li a:active {
   border: none;
   min-height: 100%;
   padding: 100px 0;
-  text-align: center;
+  text-align: left;
 }
 .portfolio-modal .modal-content h2 {
   margin-bottom: 15px;
